# model-training

./: .flake8  .gitignore  .pylintrc  LICENSE  Makefile  README.md  bandit.yaml  dvc.yaml  metrics.json  metrics_eval.json  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  delivery.yml  deployment.yml  release.yml  test.yml
docs/: mkdocs.yml
docs/docs/: index.md
model_training/: __init__.py  dataset.py  evaluation.py  features.py  plots.py  transform.py
model_training/modeling/: predict.py  train.py
models/: .gitignore  c1_BoW_Sentiment_Model.pkl  c2_Classifier_Sentiment_Model.joblib
notebooks/: model_training.ipynb
pylint_plugins/: random_state_checker.py
src/model-training/: model_training.ipynb
tests/: conftest.py  mutamorphic_test.py  test_features_data.py  test_ml_infrastructure.py  test_model_development.py  test_monitoring.py  test_train.py
