[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "model_training"
version = "0.0.1"
description = "Sentiment analysis"
authors = [
  { name = "remla-group-5" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
    "pandas",
    "numpy",
    "joblib",
    "scikit-learn",
    "pylint>=3.3.7",
    "pytest-cov>=6.1.1",
    "bandit>=1.8.3",
]
requires-python = "~=3.10.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["model_training"]
force_sort_within_sections = true


[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
    ]
